# MobileNoteApi

./: CMakeLists.txt  Dockerfile  README.md  install_libs.sh
include/: ManageDB.h  NoteApi.h
src/: ManageDB.cpp  NoteApi.cpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
